Fix: adjust .main-cover z-index to show background tags

--- a/css/app.css
+++ b/css/app.css
@@ -303,6 +303,7 @@ div#radio-player div#radio-left .main-cover {
     object-fit: contain;
 
     position: absolute;
+    z-index: -1;
     left: 0;
     right: 0;
     top: 0;
